--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-<!doctype html><html><head><meta charset='utf-8'/><meta name='viewport' content='width=device-width,initial-scale=1'/><title>MKTraders</title><link rel='stylesheet' href='styles.css'></head><body><header class='site-header'><div class='brand'>MKTraders</div></header><main class='hero'><h1>MKTraders</h1><p>Live + Demo binary trading dashboard. Click Dashboard to proceed.</p><a href='dashboard.html' class='btn'>Enter Dashboard</a></main></body></html>
+<script>
+async function checkBalance() {
+  const res = await fetch("/balance");
+  const data = await res.json();
+  document.getElementById("output").innerText =
+    data.balance ? `Balance: ${data.balance} ${data.currency}` : data.error;
+}
+
+async function getProposal() {
+  const payload = {
+    symbol: document.getElementById("symbol").value,
+    amount: document.getElementById("amount").value,
+    duration: document.getElementById("duration").value,
+    contract_type: "CALL",
+  };
+  const res = await fetch("/proposal", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify(payload),
+  });
+  const data = await res.json();
+  document.getElementById("output").innerText = JSON.stringify(data, null, 2);
+  window.latestProposalId = data.id;
+}
+
+async function buy() {
+  if (!window.latestProposalId) return alert("Get proposal first!");
+  const res = await fetch("/buy", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ proposal_id: window.latestProposalId }),
+  });
+  const data = await res.json();
+  document.getElementById("output").innerText = JSON.stringify(data, null, 2);
+}
+</script>
